// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render with an icon 1`] = `
<button
  class="link"
>
  <span
    aria-label="gear"
    class="icon fa fa-gear"
  />
  <span
    class="text"
  />
</button>
`;

exports[`Button should render with skin link 1`] = `
<button
  class="link"
>
  <span
    class="text"
  />
</button>
`;

exports[`Button should render with skin primary 1`] = `
<button
  class="primary"
>
  <span
    class="text"
  />
</button>
`;

exports[`Button should render with skin secondary 1`] = `
<button
  class="secondary"
>
  <span
    class="text"
  />
</button>
`;

exports[`Button should render with skin underlined 1`] = `
<button
  class="underlined"
>
  <span
    class="text"
  />
</button>
`;
